<resources>
    <string name="app_name">ChatApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_in">Войти в аккаунт</string>
    <string name="sign_up">Зарегистрироваться</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Повторите пароль</string>
    <string name="back_to_auth">Вернуться к аквторизации</string>
    <string name="text_message">text message</string>
    <string name="your_photo_profile">Your photo profile</string>
    <string name="your_nickname">Ваш псевдоним</string>
    <string name="hello_john">Hello John</string>
    <string name="icon_message_row">icon_message_row</string>
    <string name="chat">Чат</string>
    <string name="profile">Профиль</string>
    <string name="next_step">Продолжить</string>
    <string name="welcome_to_lotos">Welcome to Lotos</string>
    <string name="fill_in_the_fields">Заполните поля</string>
    <string name="password_dont_match">Пароли не совпадают </string>
    <string name="password_is_short">Слишком простой пароль </string>
    <string name="fields_blank">Поля пустые</string>
    <string name="auth_error">Неверный email или пароль</string>
    <string name="your_email">Ваш email</string>
    <string name="exit">Exit</string>
    <string name="how_are_you">How are you?</string>
</resources>