<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    app:cardCornerRadius="4dp"
    app:cardElevation="1dp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/message_row"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:orientation="horizontal"
        >

        <ImageView
            android:id="@+id/icon_message_row"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/icon_message_row"
            android:src="@drawable/ic_baseline_account_circle_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/tv_message_row_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_message_row_name"
            android:layout_width="285dp"
            android:layout_height="30dp"
            android:layout_marginBottom="36dp"
            android:paddingStart="16dp"
            android:paddingTop="4dp"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/icon_message_row"
            app:layout_constraintTop_toTopOf="parent"
            tools:hint="@string/hello_john" />

        <TextView
            android:id="@+id/tv_message_row"
            android:layout_width="285dp"
            android:layout_height="30dp"
            android:layout_marginBottom="17dp"
            android:paddingStart="16dp"
            android:paddingTop="4dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/icon_message_row"
            app:layout_constraintTop_toBottomOf="@id/tv_message_row_name"
            tools:hint="@string/how_are_you" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>